# PoorMansStudio

./: .gitignore  Build-PoorMansStudio.ps1  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.txt
builds/: README.md
src/: main.cpp
src/app/: AppPaths.cpp  AppPaths.h  AppVersion.h  TempCleaner.cpp  TempCleaner.h  UserPreferences.cpp  UserPreferences.h
src/audio/: AudioClipImporter.cpp  AudioClipImporter.h  AudioClipRecorder.cpp  AudioClipRecorder.h  ExternalFfmpegEncoder.cpp  ExternalFfmpegEncoder.h  ExternalFfmpegMixer.cpp  ExternalFfmpegMixer.h  ExternalFluidSynthRenderer.cpp  ExternalFluidSynthRenderer.h  ExternalSfizzRenderer.cpp  ExternalSfizzRenderer.h  GainLimits.h  RenderJob.cpp  RenderJob.h  RenderPlan.cpp  RenderPlan.h  RenderSettings.cpp  RenderSettings.h  SfzValidator.cpp  SfzValidator.h  SoundFontPresetReader.cpp  SoundFontPresetReader.h
src/clap/: ClapAbiProbe.cpp  ClapAbiProbe.h  ClapEffectEditorHost.cpp  ClapEffectEditorHost.h  ClapEffectHost.cpp  ClapEffectHost.h  ClapInstrumentHost.cpp  ClapInstrumentHost.h  ClapLiveCallbackBridge.cpp  ClapLiveCallbackBridge.h  ClapLiveDirectPreviewEngine.cpp  ClapLiveDirectPreviewEngine.h  ClapLiveEffectSession.cpp  ClapLiveEffectSession.h  ClapLiveInstrumentSession.cpp  ClapLiveInstrumentSession.h  ClapLivePlaybackScheduler.cpp  ClapLivePlaybackScheduler.h  ClapLiveTrackSessionManager.cpp  ClapLiveTrackSessionManager.h  ClapPluginScanner.cpp  ClapPluginScanner.h  ClapPluginTypes.cpp  ClapPluginTypes.h  ClapSnapshotStore.cpp  ClapSnapshotStore.h
src/clap_host_helper/: PoorMansStudioClapHostMain.cpp
src/core/: AudioClip.h  InstrumentAssignment.h  InstrumentNameMatcher.cpp  InstrumentNameMatcher.h  NoteEvent.h  Project.h  StableId.h  Track.h
src/exporting/: ExportSettings.cpp  ExportSettings.h
src/gui/: AudioClipEditorComponent.cpp  AudioClipEditorComponent.h  HelperBubbles.h  MainComponent.cpp  MainComponent.h  PianoRollComponent.cpp  PianoRollComponent.h
src/import_export/: MidiImporter.cpp  MidiImporter.h  MusicXmlImporter.cpp  MusicXmlImporter.h
src/midi/: MidiExporter.cpp  MidiExporter.h
src/playback/: MixedLiveProjectPreviewEngine.cpp  MixedLiveProjectPreviewEngine.h  PlaybackTransportCoordinator.cpp  PlaybackTransportCoordinator.h
src/serialization/: ProjectSerializer.cpp  ProjectSerializer.h
src/vst/: VstGraphicsProfile.cpp  VstGraphicsProfile.h  VstHostProbe.cpp  VstHostProbe.h  VstInstrumentHost.cpp  VstInstrumentHost.h  VstLiveDirectPreviewEngine.cpp  VstLiveDirectPreviewEngine.h  VstLiveEffectSession.cpp  VstLiveEffectSession.h  VstLiveInstrumentSession.cpp  VstLiveInstrumentSession.h  VstLiveTrackSessionManager.cpp  VstLiveTrackSessionManager.h  VstPluginScanner.cpp  VstPluginScanner.h  VstPluginTypes.cpp  VstPluginTypes.h  VstSnapshotStore.cpp  VstSnapshotStore.h
src/vst_host_helper/: PoorMansStudioVstHostMain.cpp
workspace/: README.md
workspace/clap/: README.md
workspace/clap_host/: README.md
workspace/docs/: SETUP_AND_BUILD_GUIDE.txt  USER_GUIDE.txt
workspace/exports/: README.md
workspace/ffmpeg/: README.md
workspace/fluidsynth/: README.md
workspace/input/: README.md
workspace/program/: README.md
workspace/projects/: README.md
workspace/recordings/: README.md
workspace/renders/: README.md
workspace/samples/: README.md
workspace/settings/: README.md
workspace/sfizz/: README.md
workspace/sfz/: README.md
workspace/songs/: README.md
workspace/soundfonts/: README.md
workspace/temp/: README.md
workspace/themes/: 001-default.xml  002-studio_dark.xml  003-warm_graphite.xml  004-midnight_blue.xml  005-forest_slate.xml  006-plum_night.xml  007-high_contrast.xml
workspace/vst3/: README.md
workspace/vst_host/: README.md
